--- a/scss/modules/_section-load.scss
+++ b/scss/modules/_section-load.scss
@@ -1,8 +1,8 @@
-section.upload {
+// Upload
+section.load {
 	display:block;
 	width:100%;
 	height:100%;
-	background:$lighterblue;
 	display:flex;
 	justify-content:center;
 	align-items:center;
@@ -13,19 +13,15 @@ section.upload {
 		text-align:center;
 	}
 
-	// Card
-	.card {
-		display:inline-block;
-		width:680px;
-		background:#FFF;
-		border:1px solid darken($lightblue, 5%);
-		border-radius:$radius;
-		padding:30px;
-		margin:10px;
-		text-align:left;
-		box-shadow:0px 2px 5px rgba(0, 0, 0, .05);
-		&.half {width:340px;}
-		&.selected {box-shadow: 0px 2px 5px $darkblue;}
-		&:hover {cursor:pointer;}
+	// Dots
+	.dots {
+		width:100%;
+		margin-top:60px;
+		@include select(none);
 	}
+}
+
+div.full-view {
+	height: 100%;
+	width: 100%;
 }
