show a warning message if any file fails to load

--- a/partials/main.html
+++ b/partials/main.html
@@ -45,6 +45,7 @@
     <div ng-show="main.success.state" class="warning">
       <div ng-if="main.success.state==='success'" class="success">Success{{main.success.reason}}</div>
       <div ng-if="main.success.state==='failure'" class="failure">Failure{{main.success.reason}}</div>
+      <div ng-if="main.success.state==='warning'" class="warning">{{main.success.reason}}</div>
     </div>
 		<!-- Progress Bar -->
 		<div class="progress-bar" ng-show="main.progress.state">
