--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -29,7 +29,7 @@ footer {
 		width: 80%;
 		text-align: left;
 		padding-left: 10px;
-		padding-top: 10px;
+		padding-top: 5px;
 		font-size: 20px;
 		div {
 			height: 30px;
@@ -40,6 +40,9 @@ footer {
 				color: $darkblue;
 			}
 			&.failure {
+				color: $orange;
+			}
+			&.warning {
 				color: $orange;
 			}
 		}
