Configure sass-loader for webpack. Remove gulp-sass.

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -18,4 +18,4 @@
 @import '../scss/modules/section-upload';
 
 // Vendor
-@import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css';
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css');
