--- a/scss/modules/_section-organize.scss
+++ b/scss/modules/_section-organize.scss
@@ -21,7 +21,7 @@ section.organize {
 			display:block;
 			width:100%;
 			border-bottom:1px solid $lightblue;
-			padding:18px 20px 20px 20px;
+			padding:20px;
 
 			// Heading Icons
 			h3 .fa-sort-down, h3 .fa-sort-up, h3 .fa-pencil {
