--- a/scss/partials/_forms.scss
+++ b/scss/partials/_forms.scss
@@ -48,7 +48,7 @@ input[type="text"].project-title {
 	display:block;
 	width:100%;
 	max-width:400px;
-	height: 28px;
+	line-height: 28px;
 	background:#FFF;
 	border: 1px solid $lightblue;
 	border-radius:$radius;
