--- a/partials/upload.html
+++ b/partials/upload.html
@@ -21,7 +21,7 @@
       </div>
       <div class="form-group" ng-show="upload.groups.length">
         <select ng-options="group as group.name for group in upload.groups" ng-model="upload.destinationGroup" ng-change="upload.loadProjects()">
-          <option value="" ng-if="!upload.destinationGroup">- Select Group -</option>
+          <option value="" ng-show="!upload.destinationGroup">- Select Group -</option>
         </select>
       </div>
       <div class="margin-40 warning">{{upload.projectWarning}}</div>
